samples/_failures_safe/1761602745_3b9b29_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_58125365.c: In function ‘main’:
./samples/SAFE/__tmp_58125365.c:182:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  182 |     TokenList* tokens
      |     ^~~~~~~~~
./samples/SAFE/__tmp_58125365.c:182:5: error: expected declaration or statement at end of input
